--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,18 @@
         <mybatis-spring-version>1.3.1</mybatis-spring-version>
         <spring-version>4.3.8.RELEASE</spring-version>
         <spring-security-version>4.2.2.RELEASE</spring-security-version>
+        <jasypt-version>1.9.2</jasypt-version>
         <testng-version>6.11</testng-version>
         <c3p0-version>0.9.1.2</c3p0-version>
         <mysql-version>6.0.6</mysql-version>
         <jackson-version>2.8.8</jackson-version>
-        <apache-io>2.5</apache-io>
+        <apache-io>2.6</apache-io>
         <apache-xerces>2.9.0</apache-xerces>
+        <apache-lang>2.5</apache-lang>
         <amazon-version>1.11.123</amazon-version>
+        <javax-servlet-version>3.1.0</javax-servlet-version>
+        <log4j-version>1.2.17</log4j-version>
+        <jwt-version>0.7.0</jwt-version>
     </properties>
 
     <dependencyManagement>
@@ -143,6 +148,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>${apache-io}</version>
             </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${apache-lang}</version>
+            </dependency>
 
             <!-- ENCODIND -->
             <dependency>
@@ -156,6 +166,34 @@
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk-s3</artifactId>
                 <version>${amazon-version}</version>
+            </dependency>
+
+            <!-- JASYPT -->
+            <dependency>
+                <groupId>org.jasypt</groupId>
+                <artifactId>jasypt-springsecurity3</artifactId>
+                <version>${jasypt-version}</version>
+            </dependency>
+
+            <!-- JAVAX SERVLET -->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javax-servlet-version}</version>
+            </dependency>
+
+            <!-- LOGGING -->
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j-version}</version>
+            </dependency>
+
+            <!-- JWT -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
