--- a/service/pom.xml
+++ b/service/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>spring-security-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.bavuta</groupId>
             <artifactId>db</artifactId>
             <version>1.0-SNAPSHOT</version>
