--- a/web/pom.xml
+++ b/web/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>spring-security-taglibs</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt-springsecurity3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.bavuta</groupId>
             <artifactId>controller</artifactId>
             <version>1.0-SNAPSHOT</version>
